--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-uglify": "~0.1.2",
-    "grunt-contrib-concat": "~0.1.3"
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-jasmine": "~0.4.2"
   },
   "licenses": [
     {
