--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
       "type": "MIT",
       "url": "http://rem.mit-license.org"
     }
-  ]
+  ],
+  "scripts": {
+    "comment": "note: this test is for travis, to test properly, use karma start karma.conf.js",
+    "test": "./node_modules/.bin/karma start --browsers Firefox --single-run",
+  },
+  "devDependencies": {
+    "sinon": "~1.7.3",
+    "karma": "~0.8"
+  }
 }
