get travis to look at node 0.10.x rather than 0.1.x!

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
-  - 0.10
-  - 0.8
+  - "0.10"
+  - "0.8"
 # do it in firefox, just because I'm less likely to catch it
 before_script:
+  - npm install
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+notifications:
+  email: false
