--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.1.2",
     "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-contrib-jasmine": "~0.4.2"
+    "grunt-contrib-watch": "~0.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/remy/min.js.git"
   },
   "licenses": [
     {
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "sinon": "~1.7.3",
-    "karma": "~0.8"
+    "karma": "~0.8",
+    "grunt-karma": "~0.4.5"
   }
 }
